PICS-4196 -- Links don't wrap correctly

--- a/WebContent/css/registration.css
+++ b/WebContent/css/registration.css
@@ -1186,13 +1186,20 @@ footer .footer-menu a
 {
 	color: #7f96a7;
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-size: 13px; 
+	font-size: 13px;
 }
 
 .make-payment .policy li a:hover,
 .make-payment .membership-help a:hover
 {
 	text-decoration: none;
+}
+
+.make-payment .policy a.modal-link
+{
+	vertical-align:top;
+	line-height: 200%;
+	white-space: nowrap;
 }
 
 .make-payment .membership-help
